Calculate total on cart, Calculate sub total on cart, Calculate shipping on cart, Calculate vat on cart, And add (vat, shipping, sub-total, and total) to Cart Resource
